# tests_learning

./: pyproject.toml
tests/: test_capitalize.py
