[tool.poetry]
name = "tests_learning"
version = "0.1.0"
description = ""
authors = ["denis <yudaev1@gmail.com>"]
packages = [
 { include = "package_name" },
 ]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
